--- a/rscarriel3c/Template/ent.html
+++ b/rscarriel3c/Template/ent.html
@@ -31,7 +31,7 @@
                            <div class="dash_blog">
                               <div class="dash_blog_inner">
                                  <div class="dash_head">
-                                    <h3><span><i class="fa fa-comments-o"></i>Donaciones</span><span class="plus_green_bt"><a href="/admin/Inicio/matriculacion/export/?">⬇️</a></span></h3>
+                                    <h3><span><i class="fa fa-comments-o"></i>Donaciones</span></h3>
                                  </div>
                                  <div class="list_cont">
                                     <p>Listado</p>
