--- a/rscarriel3c/Template/index.html
+++ b/rscarriel3c/Template/index.html
@@ -38,7 +38,7 @@
       <div class="text-center my-5">
                 <img class="img-fluid rounded-circle mb-4" src="{% static 'img/log.png' %}" width="10%" height="auto" alt="..." />
                 <h1 class="text-Blue fs-3 fw-bolder">FORMULARIO</h1>
-                <p class="text-Blue-50 mb-0">DE MATRICULACIÓN</p>
+                <p class="text-Blue-50 mb-0">DE DONACIÓN</p>
             </div>
     </div>
     <div class="col">
